Addition: added more unit test cases, Refactor: some error fixes, rewrote iconService to get default Achievement icon path from properties